--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -20,6 +20,9 @@ jobs:
       - name: Initialize Docker
         uses: docker/setup-buildx-action@v2
 
+      - name: Initialize Environment Variables
+        run: cd docker && cat .env.template > .env
+
       - name: Build Docker Image
         run: cd docker && docker compose build --no-cache
 
